<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:text="@string/app_title"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout"
        android:layout_marginHorizontal="10dp">

        <Button
            android:id="@+id/btnGoods"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/btn_goods"
            android:textColor="@color/green"
            android:textSize="25sp"
            app:backgroundTint="@color/main_menu_buttons_background"
            app:icon="@android:drawable/ic_menu_mylocation"
            app:iconTint="@color/main_menu_buttons" />

        <Button
            android:id="@+id/btnDocuments"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/btnGoods"
            android:text="@string/btn_documents"
            android:textColor="@color/green"
            android:textSize="25sp"
            app:backgroundTint="@color/main_menu_buttons_background"
            app:icon="@android:drawable/ic_menu_agenda"
            app:iconTint="@color/main_menu_buttons" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/btnDocuments"
            android:text="@string/btn_settings"
            android:textColor="@color/blue"
            android:textSize="25sp"
            app:backgroundTint="@color/main_menu_buttons_background"
            app:icon="@android:drawable/ic_menu_manage"
            app:iconTint="@color/main_menu_buttons" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/btnSettings"
            android:text="@string/btn_exit"
            android:textColor="@color/red"
            android:textSize="25sp"
            app:backgroundTint="@color/main_menu_buttons_background"
            app:icon="@android:drawable/ic_lock_power_off"
            app:iconTint="@color/main_menu_buttons" />

    </RelativeLayout>
</RelativeLayout>