<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocumentActivity">

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:gravity="start"
        android:weightSum="100">

        <Button
            android:id="@+id/backBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            app:backgroundTint="@color/main_buttons_background"
            app:icon="@android:drawable/ic_media_rew"
            app:iconTint="@color/main_buttons" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:gravity="center_vertical"
            android:background="@color/black"
            android:text="@string/document"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/uploadDocument"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:layout_marginStart="5sp"
            app:backgroundTint="@color/main_buttons_background"
            app:icon="@android:drawable/ic_menu_upload"
            app:iconTint="@color/main_buttons" />

        <Button
            android:id="@+id/deleteDocument"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:layout_marginStart="5sp"
            app:backgroundTint="@color/main_buttons_background"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconTint="@color/main_buttons" />
    </LinearLayout>

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttonPanel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tabs_background"/>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/scanTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.journeyapps.barcodescanner.DecoratedBarcodeView
                        android:id="@+id/barcodeScanner"
                        android:layout_width="match_parent"
                        android:layout_height="150sp">

                    </com.journeyapps.barcodescanner.DecoratedBarcodeView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="100">

                            <LinearLayout
                                android:id="@+id/barcodeLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:weightSum="100">

                                <ImageView
                                    android:id="@+id/barcodeImageView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:contentDescription="@string/barcode"
                                    android:src="@drawable/ic_qr_code" />

                                <EditText
                                    android:id="@+id/barcode"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="100"
                                    android:layout_marginStart="5dp"
                                    android:backgroundTint="@color/black"
                                    android:hint="@string/hint_barcode"
                                    android:imeOptions="actionDone"
                                    android:inputType="number"
                                    android:textSize="20sp" />
                                <!--                        android:inputType="number"-->


                            </LinearLayout>

                            <TextView
                                android:id="@+id/currentBarcode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/barcodeLayout"
                                android:layout_marginTop="2sp"
                                android:textColor="@color/blue"
                                android:textSize="20sp" />
                        </RelativeLayout>

                        <ImageButton
                            android:id="@+id/addBtn"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5sp"
                            android:scaleType="center"
                            android:background="@drawable/ic_add_green" />

                        <ImageButton
                            android:id="@+id/scanBtn"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5sp"
                            android:scaleType="center"
                            android:background="@drawable/ic_camera" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/countLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:weightSum="100">

                        <ImageView
                            android:id="@+id/amountImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/barcode"
                            android:src="@drawable/ic_sum" />

                        <EditText
                            android:id="@+id/amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="40"
                            android:gravity="center"
                            android:text="@string/zero"
                            android:textColor="@color/green"
                            android:textSize="15sp"
                            android:enabled="false" />

                        <TextView
                            android:id="@+id/countText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/plus"
                            android:textColor="@color/blue"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="60"
                            android:gravity="center"
                            android:imeOptions="actionDone"
                            android:inputType="numberDecimal"
                            android:text="@string/zero"
                            android:background="@color/yellow"
                            android:textColor="@color/blue"
                            android:textSize="25sp" />
                        <!--                        android:inputType="numberDecimal"-->

                        <Button
                            android:id="@+id/setBtn"
                            android:layout_width="60sp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5sp"
                            app:backgroundTint="@color/white"
                            app:iconTint="@color/buttons_1"
                            app:icon="@android:drawable/ic_menu_edit"/>

                        <Button
                            android:id="@+id/deleteBtn"
                            android:layout_width="60sp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5sp"
                            android:layout_marginEnd="5sp"
                            app:backgroundTint="@color/white"
                            app:iconTint="@color/buttons_1"
                            app:icon="@android:drawable/ic_delete"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/goodsDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/hint_goods_details"
                        android:textSize="20dp"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mainTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/docIdLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/docIdText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/doc_number"
                            android:textSize="25sp" />

                        <EditText
                            android:id="@+id/docId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:backgroundTint="@color/black"
                            android:hint="@string/hint_doc_number"
                            android:textSize="25sp"
                            android:enabled="false"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/docDateLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/docNumberLayout"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/docDateText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/doc_date"
                            android:textSize="25sp" />

                        <EditText
                            android:id="@+id/docDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/black"
                            android:hint="@string/hint_doc_date"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textSize="25sp" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/docCommentsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/docNumberLayout"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/docCommentsText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/doc_comments"
                            android:textSize="25sp" />

                        <EditText
                            android:id="@+id/docComments"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/docCommentsText"
                            android:backgroundTint="@color/black"
                            android:hint="@string/hint_doc_comments"
                            android:textSize="25sp" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/goodsTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/filterLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/buttonPanel"
                        android:gravity="start"
                        android:weightSum="100"
                        android:background="@color/gray">

                        <ImageView
                            android:id="@+id/filterImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/ic_search"
                            android:contentDescription="@string/filter" />

                        <EditText
                            android:id="@+id/filter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="100"
                            android:layout_marginStart="5sp"
                            android:backgroundTint="@color/black"
                            android:hint="@string/hint_filter"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/filterClear"
                            android:layout_width="60sp"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            app:backgroundTint="@color/gray"
                            app:icon="@drawable/ic_search_off"
                            app:iconTint="@color/clear_filter"/>

                        <ImageButton
                            android:id="@+id/filterScan"
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5sp"
                            android:scaleType="center"
                            android:background="@drawable/ic_camera" />
                    </LinearLayout>

                    <ListView
                        android:id="@+id/goods_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </ListView>

                </LinearLayout>



            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>